--- a/src/app/page/auth/login/login.component.css
+++ b/src/app/page/auth/login/login.component.css
@@ -43,6 +43,11 @@
         border-color: #46218f;
 }
 
+.disabled-button{
+    background-color: #412873;
+    color:#ffffff;
+}
+
 .izquierda{
     background-color: #7432fa;
     display: flex;
@@ -91,6 +96,13 @@
     gap: 10px;
 }
 
+.register{
+    font-weight:500;
+    text-align: center;
+    color: #7432fa;
+    font-family: 'Trebuchet MS';
+    padding: 20px;
+}
 
 .btn-atras{
     color: #7432fa;
@@ -109,3 +121,21 @@
         color: #7432fa;
         border-color: #7432fa;
 }
+
+.validacion{
+    font-family: 'Tahoma';
+    font-size: 10px;
+    color: #b20e0e;
+    font-weight: bolder;
+    height: 1.5em; /* Espacio reservado fijo para el mensaje de error */
+    margin: 0;
+    padding: 0;
+    line-height: 1.5;
+    visibility: hidden; /* Oculto por defecto */
+}
+
+.is-invalid {
+    border: 2px solid #dc3545; 
+  }
+
+  
