--- a/src/app/page/auth/register/register.component.css
+++ b/src/app/page/auth/register/register.component.css
@@ -1,3 +1,7 @@
+.fondo{
+    display: flex;
+    min-height: 100vh;
+}
 .derecha{
     display: flex;
     flex-direction: column;
@@ -12,6 +16,7 @@
     margin: 0 auto;
 }
 
+
 .form-control{
     box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.3);
     font-size: 12px;
@@ -19,8 +24,25 @@
     border-radius: 15px;
 }
 
+.is-invalid {
+    border: 2px solid #dc3545; 
+  }
+
+  
+  .validacion{
+    font-family: 'Tahoma';
+    font-size: 10px;
+    color: #b20e0e;
+    font-weight: bolder;
+    height: 1.5em; /* Espacio reservado fijo para el mensaje de error */
+    margin: 0;
+    padding: 0;
+    line-height: 1.5;
+    visibility: hidden; /* Oculto por defecto */
+}
+
 .form-label{
-    font-size: 14px;
+    font-size: 12px;
     color: #4e4d4d;
 }
 
@@ -43,14 +65,16 @@
         border-color: #46218f;
 }
 
-.izquierda{
-    background-color: #7432fa;
+.izquierda, .col-md-6.p-4 {
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
+}
+
+.izquierda{
+    background-color: #7432fa;
+    align-items: center;
     text-align: center;
-    height: 100vh;
 }
 
 .welcome{
@@ -84,7 +108,12 @@
     background-color: #ffffff;
     color: #7432fa;
         
-    }
+}
+
+.disabled-button{
+    background-color: #412873;
+    color:#ffffff;
+}
 
 .regresar{
     width: 90%;
@@ -94,11 +123,18 @@
     gap: 10px;
 }
 
+.register{
+    font-weight:500;
+    text-align: center;
+    color: #7432fa;
+    font-family: 'Trebuchet MS';
+    padding: 20px;
+}
 
 .btn-atras{
-    color: #7432fa;
+    color: #ffffff;
     border-radius: 15px;
-    border: 2px solid #7432fa;
+    border: 2px solid #ffffff;
     padding: 5px 10px ;
     box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.3);
     width: 90px; 
@@ -106,6 +142,8 @@
     display: block;
     text-align: center;
     font-size: 16px;
+    margin-top: -50px;
+
 }
 .btn-atras:hover{
         background-color: #ffffff;
