--- a/src/app/page/auth/register/register.component.html
+++ b/src/app/page/auth/register/register.component.html
@@ -1,85 +1,176 @@
-<section class=" row fondo">
-    <div class="col-md-6 izquierda">
-        <h1 class="welcome">¡Bienvenido!</h1>
-        <p class="description-register">
-            Vive una experiencia única, registrate y<br>
-            compra pasajes a los mejores precios.<br>
-            ¿Ya tienes cuenta?
-        </p>
-        <div class="">
-            <button class="form-login-fondo" type="submit">Inicia Sesion</button>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Emtrafesa-Registrar</title>
+    <link rel="stylesheet" href="register.component.css">
+</head>
+
+<body>
+    <section class=" row fondo">
+        <div class="col-md-6 izquierda">
+            <div class=" regresar d-flex">
+                <a href="/" class="navbar-brand btn-atras">Atrás</a>
+            </div>
+            <h1 class="welcome">¡Bienvenido!</h1>
+            <p class="description-register">
+                Vive una experiencia única, registrate y<br>
+                compra pasajes a los mejores precios.<br>
+                ¿Ya tienes cuenta?
+            </p>
+            <div class="">
+                <a routerLink="/auth/login" class="navbar-brand form-login-fondo">Inicia sesión</a>
+            </div>
         </div>
-    </div>
-    <div class="col-md-6 p-4">
-        <h2 class="register text-center p-5">Regístrate</h2>
-            <form class="formulario row g-3 needs-validation" novalidate>
+        <div class="col-md-6 p-3">
+            <h2 class="register text-center">Regístrate</h2>
+            <form [formGroup]="registerForm" (ngSubmit)="onSubmit()" class="formulario row g-3">
                 <div class="col-md-6">
                     <label for="tipoDocumento" class="form-label">Tipo de documento</label>
-                    <select class="form-select form-control" aria-label="Small select example" required>
+                    <select class="form-select form-control" aria-label="Small select example"
+                        formControlName="tipoDocumento"
+                        [ngClass]="{ 'is-invalid': registerForm.get('tipoDocumento')?.invalid && registerForm.get('tipoDocumento')?.touched }">
                         <option selected disabled value="">Seleccione el documento</option>
                         <option value="1">Documento de identidad (DNI)</option>
                         <option value="2">Carnet de extranjería</option>
                     </select>
-                    <div class="invalid-feedback">
-                        Por favor, selecciona una opción
+                    <div class="text-danger validacion"
+                    [style.visibility]="registerForm.get('tipoDocumento')?.invalid && (registerForm.get('tipoDocumento')?.touched || registerForm.get('tipoDocumento')?.dirty)? 'visible' : 'hidden'"
+                    >
+                        Seleccione una opción.
                     </div>
                 </div>
+
                 <div class="col-md-6">
                     <label for="numeroDocumento" class="form-label">Número de documento</label>
-                    <input type="text" class="form-control" id="numeroDocumento" placeholder="Ingrese número de documento"
-                        required>
-                    <div class="invalid-feedback">
-                        Por favor, ingrese el número de documento
+                    <input type="text" formControlName="numeroDocumento" class="form-control"
+                        placeholder="Ingrese número de documento" (input)="enforceMaxLength()"
+                        [ngClass]="{ 'is-invalid': registerForm.get('numeroDocumento')?.invalid && (registerForm.get('numeroDocumento')?.touched || registerForm.get('numeroDocumento')?.dirty) }">
+                        <div class="text-danger validacion"
+                        [style.visibility]="registerForm.get('numeroDocumento')?.invalid && (registerForm.get('numeroDocumento')?.touched || registerForm.get('numeroDocumento')?.dirty)? 'visible' : 'hidden'"
+                        >
+                        <div *ngIf="registerForm.get('numeroDocumento')?.errors?.['required']">Campo
+                            obligatorio.</div>
+                        <div *ngIf="registerForm.get('numeroDocumento')?.errors?.['pattern']">Solo se
+                            permiten números.</div>
+                        <div *ngIf="registerForm.get('numeroDocumento')?.errors?.['minlength']">Debe
+                            tener  8 dígitos.</div>
+                        <div *ngIf="registerForm.get('numeroDocumento')?.errors?.['maxlength']">
+                            Máximo 20 dígitos permitidos.</div>
                     </div>
                 </div>
+
                 <div class="col-md-6">
                     <label for="name" class="form-label">Nombre</label>
-                    <input type="text" class="form-control" id="name" placeholder="Ingrese su nombre" required>
-                    <div class="invalid-feedback">
-                        Por favor, ingrese su nombre
+                    <input type="text" formControlName="nombre" class="form-control" placeholder="Ingrese su nombre"
+                        [ngClass]="{ 'is-invalid': registerForm.get('nombre')?.invalid && (registerForm.get('nombre')?.touched || registerForm.get('nombre')?.dirty) }">
+                        <div class="text-danger validacion"
+                        [style.visibility]="registerForm.get('nombre')?.invalid && (registerForm.get('nombre')?.touched || registerForm.get('nombre')?.dirty)? 'visible' : 'hidden'"
+                        >
+                        <div *ngIf="registerForm.get('nombre')?.errors?.['required']">Campo
+                            obligatorio.</div>
+                        <div *ngIf="registerForm.get('nombre')?.errors?.['pattern']" >Solo se permiten
+                            letras y espacios.</div>
                     </div>
                 </div>
+
                 <div class="col-md-6">
                     <label for="lastName" class="form-label">Apellidos</label>
-                    <input type="text" class="form-control" id="lastName" placeholder="Ingrese sus apellidos" required>
-                    <div class="invalid-feedback">
-                        Por favor, ingrese sus apellidos
+                    <input type="text" formControlName="apellidos" class="form-control" id="lastName"
+                        placeholder="Ingrese sus apellidos"
+                        [ngClass]="{ 'is-invalid': registerForm.get('apellidos')?.invalid && (registerForm.get('apellidos')?.touched || registerForm.get('apellidos')?.dirty) }">
+                        <div class="text-danger validacion"
+                        [style.visibility]="registerForm.get('apellidos')?.invalid && (registerForm.get('apellidos')?.touched || registerForm.get('apellidos')?.dirty)? 'visible' : 'hidden'"
+                        >
+                        <div *ngIf="registerForm.get('apellidos')?.errors?.['required']" >Campo
+                            obligatorio.</div>
+                        <div *ngIf="registerForm.get('apellidos')?.errors?.['pattern']" >Solo se
+                            permiten letras y espacios.</div>
                     </div>
                 </div>
+
+
                 <div class="col-md-6">
                     <label for="tipoCelular" class="form-label">Tipo de teléfono</label>
-                    <select class="form-select form-control" aria-label="Small select example" required>
+                    <select class="form-select form-control" aria-label="Small select example"
+                        formControlName="tipoTelefono"
+                        [ngClass]="{'is-invalid': registerForm.get('tipoTelefono')?.invalid && registerForm.get('tipoTelefono')?.touched}">
                         <option selected disabled value="">Seleccione el teléfono</option>
                         <option value="1">Celular</option>
                         <option value="2">Fijo</option>
                         <option value="3">Trabajo</option>
                     </select>
-                </div>
-                <div class="col-md-6">
-                    <label for="numeroTelefono" class="form-label">Número de telefono</label>
-                    <input type="text" class="form-control" id="numeroTelefono" placeholder="Ingrese número de telefono"
-                        required>
-                    <div class="invalid-feedback">
-                        Por favor, ingrese un número de telefono
+                    <div class="text-danger validacion"
+                    [style.visibility]="registerForm.get('tipoTelefono')?.invalid && (registerForm.get('tipoTelefono')?.touched || registerForm.get('tipoTelefono')?.dirty)? 'visible' : 'hidden'"
+                    > Seleccione una opción.
                     </div>
                 </div>
+                
+                <div class="col-md-6">
+                    <label for="numeroTelefono" class="form-label">Número de teléfono</label>
+                    <input 
+                        type="text" 
+                        formControlName="numeroTelefono" 
+                        class="form-control" 
+                        placeholder="Ingrese número de teléfono" 
+                        [ngClass]="{ 'is-invalid': registerForm.get('numeroTelefono')?.invalid && registerForm.get('numeroTelefono')?.touched }"
+                        (input)="maxDocumentoLength()"
+                    >
+                    <div class="text-danger validacion"
+                    [style.visibility]="registerForm.get('numeroTelefono')?.invalid && (registerForm.get('numeroTelefono')?.touched || registerForm.get('numeroTelefono')?.dirty)? 'visible' : 'hidden'"
+                    >
+                        <div *ngIf="registerForm.get('numeroTelefono')?.errors?.['required']">Campo obligatorio.</div>
+                        <div *ngIf="registerForm.get('numeroTelefono')?.errors?.['pattern']" >Solo se permiten números.</div>
+                        <div *ngIf="registerForm.get('numeroTelefono')?.errors?.['minlength'] && registerForm.get('tipoTelefono')?.value === '1'">Debe tener 9 dígitos.</div>
+                        <div *ngIf="registerForm.get('numeroTelefono')?.errors?.['minlength'] && registerForm.get('tipoTelefono')?.value === '2'">Debe tener 6 dígitos.</div>
+                        <div *ngIf="registerForm.get('numeroTelefono')?.errors?.['maxlength'] && registerForm.get('tipoTelefono')?.value === '3'">Debe tener 9 dígitos.</div>
+                    </div>
+                </div>
+                
                 <div class="col-md-12">
                     <label for="inputEmail" class="form-label">Correo Electrónico</label>
-                    <input type="text" class=" form-control" id="inputEmail" placeholder="user@dominio.com" required>
-                    <div class="invalid-feedback">
-                        Por favor, ingrese un correo electrónico
+                    <input type="text" formControlName="correo" class="form-control" id="inputEmail"
+                        placeholder="user@dominio.com"
+                        [ngClass]="{ 'is-invalid': registerForm.get('correo')?.invalid && (registerForm.get('correo')?.dirty || registerForm.get('correo')?.touched) }"
+                        >
+    
+                    <div class="text-danger validacion"
+                        [style.visibility]="registerForm.get('correo')?.invalid && (registerForm.get('correo')?.touched || registerForm.get('correo')?.dirty) ? 'visible' : 'hidden'">
+                        <div *ngIf="registerForm.get('correo')?.errors?.['required']">Campo obligatorio.</div>
+                        <div *ngIf="registerForm.get('correo')?.errors?.['email']">Correo inválido.</div>
                     </div>
                 </div>
+    
                 <div class="col-md-12">
                     <label for="inputPassword" class="form-label">Contraseña</label>
-                    <input type="text" class="form-control" id="inputPassword" placeholder="contraseña12345" required>
-                    <div class="invalid-feedback">
-                        Por favor, ingrese una contraseña
+                    <input 
+                        type="password" 
+                        formControlName="contrasena" 
+                        class="form-control" 
+                        id="inputPassword"
+                        placeholder="contraseña12345"
+                        [ngClass]="{ 'is-invalid': registerForm.get('contrasena')?.invalid && (registerForm.get('contrasena')?.dirty || registerForm.get('contrasena')?.touched) }"
+                        >
+                    
+                    <div 
+                        class="text-danger validacion"
+                        [style.visibility]="registerForm.get('contrasena')?.invalid && (registerForm.get('contrasena')?.touched || registerForm.get('contrasena')?.dirty)? 'visible' : 'hidden'">
+                        <div *ngIf="registerForm.get('contrasena')?.errors?.['required']">Campo obligatorio.</div>
+                        <div *ngIf="registerForm.get('contrasena')?.errors?.['minlength']">Debe tener al menos 8 caracteres.</div>
                     </div>
-                </div>
+                </div>     
+                
                 <div class="">
-                    <button class="form-login-form" type="submit">Registrarse</button>
+                    <button class="form-login-form" type="submit" [disabled]="!registerForm.valid"
+                        [ngClass]="{'disabled-button': !registerForm.valid}">
+                        Registrarse
+                    </button>
                 </div>
+
             </form>
-    </div>
-</section>
+        </div>
+    </section>
+</body>
+</html>
