--- a/src/app/page/client/asientos/asientos.component.html
+++ b/src/app/page/client/asientos/asientos.component.html
@@ -1,9 +1,9 @@
-<h5 class="text-center my-3">Selecciona tus asientos para el viaje de {{ itinerario.horaSalida }} a {{ itinerario.horaLlegada }}</h5>
+<h5 class="text-center titulo my-3">Selecciona tus asientos para el viaje de {{ itinerario.horaSalida }} a {{ itinerario.horaLlegada }}</h5>
 <div class="asientos-container container">
   <div class="row">
     <!-- Columna izquierda para la leyenda de los asientos -->
     <div class="col-md-3">
-      <h4 class="mb-3">Leyenda</h4>
+      <p class="mb-3 leyenda">Leyenda</p>
       <ul class="list-unstyled">
         <li><span class="badge ocupada-dama"></span> Asiento ocupado por dama</li>
         <li><span class="badge ocupada-caballero"></span> Asiento ocupado por caballero</li>
