--- a/src/app/page/client/client-landing-page/client-landing-page.component.html
+++ b/src/app/page/client/client-landing-page/client-landing-page.component.html
@@ -1,4 +1,3 @@
-<app-navbar></app-navbar>
 
 <section class=fondo>
     <div class="container mt-4">
@@ -121,5 +120,5 @@
     </div>
 
 </section>
+<!--<router-outlet></router-outlet>  Aquí se renderizan las rutas hijas-->
 
-<app-footer></app-footer>
