--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,61 +1,75 @@
-<nav class="direc d-flex navbar-expand-lg">
-    <ul class="navbar-nav ma-auto">
-        <li class="nav-item">
-            <a href="#phone" class="address"> <i class="fa-solid fa-phone"></i> 987 456 217 </a>
-        </li>
-        <li class="nav-item">
-            <a href="#location" class="address"><i class="fa-solid fa-location-dot"></i> Av. Túpac Amaru 185 Urb.
-                Huerta Grande, Trujillo-Perú
+<div class="navbar-container">
+    <!-- Barra superior -->
+    <nav class="direc d-flex justify-content-between align-items-center px-4 py-2">
+      <ul class="navbar-nav d-flex">
+        <li class="nav-item me-4">
+            <a href="https://w.app/wappEmtrafesa" target="_blank" rel="noopener noreferrer" class="address">
+                📞 987 456 217
             </a>
         </li>
         <li class="nav-item">
-            <a href="#facebook" class="address"> <i class="fa-brands fa-facebook"></i> </a>
+            <a href="#location" target="_blank" rel="noopener noreferrer" class="address">
+                📍 Av. Túpac Amaru 185 Urb. Huerta Grande, Trujillo-Perú
+            </a>
+        </li>
+      </ul>
+      <ul class="navbar-nav d-flex">
+        <li class="nav-item me-3">
+          <a href="https://www.facebook.com/EmtrafesaPeru" target="_blank" rel="noopener noreferrer" class="address"><i class="fa-brands fa-facebook"></i></a>
+        </li>
+        <li class="nav-item me-3">
+          <a href="https://www.instagram.com/emtrafesaperu/" target="_blank" rel="noopener noreferrer" class="address"><i class="fa-brands fa-instagram"></i></a>
         </li>
         <li class="nav-item">
-            <a href="#instagram" class="address"> <i class="fa-brands fa-instagram"></i> </a>
+          <a href="#twitter" target="_blank" rel="noopener noreferrer" class="address"><i class="fa-brands fa-twitter"></i></a>
         </li>
-        <li class="nav-item">
-            <a href="#twitter" class="address"> <i class="fa-brands fa-twitter"></i> </a>
-        </li>
-    </ul>
-</nav>
-<nav class="navbar navbar-expand-lg ">
-    <div class="container d-flex ">
-        <a href="#" class="navbar-brand">
-            <img src="assets/image.png" alt="Emtrafesa Logo" width="40" height="45"
-                class="d-inline-block align-text-center">
-            EMTRAFESA
+      </ul>
+    </nav>
+  
+    <!-- Navbar principal -->
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img src="assets/image.png" alt="Emtrafesa Logo" width="40" height="45" class="d-inline-block align-text-center">
+          <span class="brand-text">EMTRAFESA</span>
         </a>
-
-        <button class="nav-toogler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-            <span class="nav-toogler-icon"></span>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
         </button>
-
-        <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-            <ul class="navbar-nav ma-auto">
-                <li class="nav-item">
-                    <a routerLink="" class="nav-link"><i class="fa-solid fa-road"></i> Mis viajes </a>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a routerLink="" class="nav-link"><i class="fa-solid fa-road"></i> Mis viajes</a>
+            </li>
+            <li class="nav-item">
+              <a class="btn btn-outline-primary me-3" routerLink="/auth/register">Registrarse</a>
+            </li>
+            <li class="nav-item">
+              <a class="btn btn-primary" routerLink="/auth/login"><i class="fa-solid fa-lock"></i> Iniciar Sesión</a>
+            </li>
+            <!-- Menú desplegable -->
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="profileDropdown" role="button"
+                data-bs-toggle="dropdown" aria-expanded="false">
+                <i class="fa-solid fa-user"></i> Mi perfil
+              </a>
+              <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
+                <li>
+                  <a class="dropdown-item d-flex align-items-center" routerLink="/client/profile">
+                    <i class="fa-solid fa-id-card me-2"></i> Ver Perfil
+                  </a>
                 </li>
-
-                 <!-- Botones para usuarios NO autenticados -->
-                 <li *ngIf="!isLoggedIn">
-                    <a class="btn btn-outline-primary me-3" routerLink="/auth/register">Registrarse</a>
+                <li>
+                  <a class="dropdown-item d-flex align-items-center" href="#" (click)="logout()">
+                    <i class="fa-solid fa-sign-out-alt me-2"></i> Cerrar Sesión
+                  </a>
                 </li>
-                <li *ngIf="!isLoggedIn">
-                    <a class="btn btn-primary" routerLink="/auth/login"><i class="fa-solid fa-lock"></i> Iniciar Sesión</a>
-                </li>
-
-                <!-- Menú desplegable para usuarios autenticados -->
-                <li class="nav-item dropdown" *ngIf="isLoggedIn">
-                    <a class="nav-link dropdown-toggle" href="#" id="profileDropdown" role="button" data-bs-toggle="dropdown">
-                        <i class="fa-solid fa-user"></i> Mi perfil
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" routerLink="/client/profile">Ver Perfil</a></li>
-                        <li><a class="dropdown-item" href="#" (click)="logout()">Cerrar Sesión</a></li>
-                    </ul>
-                </li>
-            </ul>
+              </ul>
+            </li>
+          </ul>
         </div>
-    </div>
-</nav>
+      </div>
+    </nav>
+  </div>
+  
